# Triangle

./: .gitignore  README.md  dev_list_1.txt  frames_2025-04-25_14.14.39.gv  frames_2025-04-25_18.32.25.gv  slam.sh  start.sh  start2.sh  start_triangle.sh  stop_triangle.sh
ESP32_Code/: README.md
maps/: my_map.pgm  my_map.yaml
scripts/: keyboard_control.py  keyboard_teleop.py  odom_to_tf.py
src/triangle/: package.xml  setup.cfg  setup.py
src/triangle/config/: bno055_params_i2c.yaml  ekf.yaml  ekf_map.yaml  ekf_odom.yaml  ekf_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  slam_toolbox_params.yaml  sllidar_node.cpp
src/triangle/description/Digital Twin URDF/: Digital.urdf
src/triangle/description/Digital Twin URDF/meshes/: Motor3.stl  RPLiDAR.stl  Wheel2.stl
src/triangle/description/urdf/: Digital.urdf
src/triangle/description/urdf/meshes/: Gearbox3.stl
src/triangle/launch/: bno055.launch.py  manual_robot.launch.py  manual_robot_logging.launch.py  mapping_launch.py  nav.launch.py  robot.launch.py  robot_state_publisher.launch.py  slam.launch.py  testing_robot_logging.launch.py
src/triangle/triangle/: __init__.py  log_odometry.py  teleop_joy_node.py  test_motion_runner.py
testing_logs/: Data Visualisation and Processing.py  cmd_vs_odom_log_20250520_172248.csv  cmd_vs_odom_log_20250520_172257.csv  cmd_vs_odom_log_20250520_172311.csv  cmd_vs_odom_log_20250520_172332.csv  cmd_vs_odom_log_20250520_172500.csv  cmd_vs_odom_log_20250520_172518.csv  cmd_vs_odom_log_20250520_172522.csv  cmd_vs_odom_log_20250520_172525.csv  (+11 more)
(+11 files in other folders)
