<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>triangle</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joshroe2001@gmail.com">joshr</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>robot_localization</depend>
  <depend>slam_toolbox</depend>
  <depend>sllidar_ros2</depend>
  <depend>bno055</depend>
  <depend>micro_ros_agent</depend>
  <depend>foxglove_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
